--- a/cronjob.yml
+++ b/cronjob.yml
@@ -1,4 +1,4 @@
-- hosts: ansible1
+- hosts: all
   gather_facts: no
   tasks:
     - name: Install Jenkins Job DSL Plugin
@@ -9,7 +9,7 @@
     - name: Create Jenkins pipeline job
       jenkins_job:
         config: |
-          pipelineJob('Your_Jenkins_Pipeline_Job_Name') {
+          pipelineJob('cronjob-pipeline') {
               triggers {
                   cron('0 2 1 * *')
               }
@@ -34,10 +34,10 @@
                                   stage('Execute Ansible Playbook') {
                                       steps {
                                           ansiblePlaybook(
-                                              playbook: 'path/to/playbook.yml',
-                                              inventory: 'path/to/inventory.yml',
+                                              playbook: '/home/ec2-user/ansible-dev/week17-ansible-code/cronjob.yml',
+                                              inventory: '/home/ec2-user/ansible-dev/week17-ansible-code/inventory.yml',
                                               colorized: true,
-                                              ansibleName: 'Your_Ansible_Installation_Name'
+                                              ansibleName: 'ansible1'
                                           )
                                       }
                                   }
