--- a/first-playbook.yml
+++ b/first-playbook.yml
@@ -1,12 +1,12 @@
 ---
-- hosts: webservers
+- hosts: all
   ignore_errors: True
   become: True
   tasks:
     - name: Create a user
       user:
-        name: mysuser
-        comment: Carlos Monte
+        name: alix
+        comment: Alix Stearns
 
     - name: Create a file on the target host
       file:
