--- a/inventory.yml
+++ b/inventory.yml
@@ -3,8 +3,8 @@
 [ws]
 172.31.31.68
 
-[wind]
-172.31.90.5
+#[wind]
+#172.31.90.5
 
 [ws:vars]
 ansible_ssh_private_key_file=~/ansible-key.pem
@@ -14,8 +14,8 @@ ansible_user= ubuntu
 ansible_ssh_private_key_file=~/ansible-key.pem
 ansible_user= ec2-user
 
-[wind:vars]
-ansible_user=Administrator
-ansible_password=
-ansible_connection=ssh
-ansible_shell_type=cmd
+#*/[wind:vars]
+#ansible_user=Administrator
+#ansible_password=
+#ansible_connection=ssh
+#ansible_shell_type=cmd
